src/parse/snapshots/camello__parse__tests__statements__success__try_function.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  TRY_STMT
    `try` "try"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          CALL_EXPR
            SUB_NAME
              identifier "do_something"
            ARG_LIST
              `(` "("
              LIST_EXPR
              `)` ")"
        `;` ";"
      `}` "}"
    `;` ";"
  TRY_STMT
    `try` "try"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          CALL_EXPR
            SUB_NAME
              identifier "risky"
            ARG_LIST
              `(` "("
              LIST_EXPR
              `)` ")"
        `;` ";"
      `}` "}"
    CATCH_CLAUSE
      `catch` "catch"
      BLOCK
        `{` "{"
        EXPR_STMT
          LIST_EXPR
            CALL_EXPR
              SUB_NAME
                identifier "handle_error"
              ARG_LIST
                `(` "("
                LIST_EXPR
                  SCALAR_VAR
                    `$` "$"
                    identifier "_"
                `)` ")"
          `;` ";"
        `}` "}"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "result"
        `=` "="
        TRY_STMT
          `try` "try"
          BLOCK
            `{` "{"
            EXPR_STMT
              LIST_EXPR
                CALL_EXPR
                  SUB_NAME
                    identifier "compute"
                  ARG_LIST
                    `(` "("
                    LIST_EXPR
                    `)` ")"
              `;` ";"
            `}` "}"
    `;` ";"
  TRY_STMT
    `try` "try"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          CALL_EXPR
            SUB_NAME
              identifier "step1"
            ARG_LIST
              `(` "("
              LIST_EXPR
              `)` ")"
        `;` ";"
      EXPR_STMT
        LIST_EXPR
          CALL_EXPR
            SUB_NAME
              identifier "step2"
            ARG_LIST
              `(` "("
              LIST_EXPR
              `)` ")"
        `;` ";"
      `}` "}"
    `;` ";"
