src/parse/snapshots/camello__parse__tests__statements__success__try_function_call.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      CALL_EXPR
        SUB_NAME
          identifier "try"
        ARG_LIST
          `(` "("
          LIST_EXPR
          `)` ")"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "value"
        `=` "="
        CALL_EXPR
          SUB_NAME
            identifier "try"
          ARG_LIST
            `(` "("
            LIST_EXPR
            `)` ")"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      LIST_CALL_EXPR
        SUB_NAME
          identifier "try"
        LIST_EXPR
          LITERAL
            number "1"
          `,` ","
          LITERAL
            number "2"
          `,` ","
          LITERAL
            number "3"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "result"
        `=` "="
        LIST_CALL_EXPR
          SUB_NAME
            identifier "try"
          LIST_EXPR
            SCALAR_VAR
              `$` "$"
              identifier "code_ref"
            `,` ","
            HASH_VAR
              `%` "%"
              identifier "args"
    `;` ";"
