src/parse/snapshots/camello__parse__tests__statements__success__try_statement.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  TRY_STMT
    `try` "try"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          CALL_EXPR
            SUB_NAME
              identifier "do_something"
            ARG_LIST
              `(` "("
              LIST_EXPR
              `)` ")"
        `;` ";"
      `}` "}"
    CATCH_CLAUSE
      `catch` "catch"
      CATCH_PARAM
        `(` "("
        SCALAR_VAR
          `$` "$"
          identifier "error"
        `)` ")"
      BLOCK
        `{` "{"
        EXPR_STMT
          LIST_EXPR
            LIST_CALL_EXPR
              SUB_NAME
                identifier "warn"
              LIST_EXPR
                SCALAR_VAR
                  `$` "$"
                  identifier "error"
          `;` ";"
        `}` "}"
    FINALLY_CLAUSE
      `finally` "finally"
      BLOCK
        `{` "{"
        EXPR_STMT
          LIST_EXPR
            CALL_EXPR
              SUB_NAME
                identifier "cleanup"
              ARG_LIST
                `(` "("
                LIST_EXPR
                `)` ")"
          `;` ";"
        `}` "}"
  TRY_STMT
    `try` "try"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          CALL_EXPR
            SUB_NAME
              identifier "maybe"
            ARG_LIST
              `(` "("
              LIST_EXPR
              `)` ")"
        `;` ";"
      `}` "}"
    CATCH_CLAUSE
      `catch` "catch"
      BLOCK
        `{` "{"
        EXPR_STMT
          LIST_EXPR
            CALL_EXPR
              SUB_NAME
                identifier "fallback"
              ARG_LIST
                `(` "("
                LIST_EXPR
                `)` ")"
          `;` ";"
        `}` "}"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "value"
        `=` "="
        TRY_STMT
          `try` "try"
          BLOCK
            `{` "{"
            EXPR_STMT
              LIST_EXPR
                CALL_EXPR
                  SUB_NAME
                    identifier "compute"
                  ARG_LIST
                    `(` "("
                    LIST_EXPR
                    `)` ")"
            `}` "}"
          CATCH_CLAUSE
            `catch` "catch"
            BLOCK
              `{` "{"
              EXPR_STMT
                LIST_EXPR
                  CALL_EXPR
                    SUB_NAME
                      identifier "recover"
                    ARG_LIST
                      `(` "("
                      LIST_EXPR
                      `)` ")"
              `}` "}"
    `;` ";"
