src/parse/snapshots/camello__parse__tests__statements__success__variable_declaration_with_attributes.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            `(` "("
            LIST_EXPR
              SCALAR_VAR
                `$` "$"
                identifier "x"
              `,` ","
              ARRAY_VAR
                `@` "@"
                identifier "y"
              `,` ","
              HASH_VAR
                `%` "%"
                identifier "z"
            `)` ")"
          ATTR
            `:` ":"
            SUB_NAME
              identifier "Bent"
        `=` "="
        LITERAL
          number "1"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      VAR_DECL
        `our` "our"
        DECL_TARGET
          SCALAR_VAR
            `$` "$"
            identifier "value"
        ATTR
          `:` ":"
          SUB_NAME
            identifier "shared"
        ATTR
          `:` ":"
          SUB_NAME
            identifier "Foo"
          ATTR_ARGS
            `(` "("
            raw text "1, 2"
            `)` ")"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `state` "state"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "scalar"
          ATTR
            `:` ":"
            SUB_NAME
              identifier "lvalue"
        `+=` "+="
        LITERAL
          number "2"
    `;` ";"
