src/parse/snapshots/camello__parse__tests__statements__success__while_empty_condition.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  LOOP_STMT
    `while` "while"
    PAREN_EXPR
      `(` "("
      LIST_EXPR
      `)` ")"
    BLOCK
      `{` "{"
      `}` "}"
